--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.trapdevice"
+    package="edu.wildlifesecurity.trapdevice"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -11,19 +11,27 @@
     <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT"/>
 
     <application
+        android:name="TrapDeviceApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/wildlifesecurity_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
-            android:name=".TrapDevice"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:label="@string/app_name" 
+            android:configChanges="keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service
+		  android:name="SurveillanceService"
+		  android:icon="@drawable/wildlifesecurity_icon"
+		  android:label="Wildlife Security Surveillance Service">
+		</service>
     </application>
 
 </manifest>
