--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,31 +7,38 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="21" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="TrapDeviceApplication"
+        android:name=".TrapDeviceApplication"
         android:allowBackup="true"
         android:icon="@drawable/wildlifesecurity_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" 
-            android:configChanges="keyboardHidden|orientation">
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <service
-		  android:name="SurveillanceService"
-		  android:icon="@drawable/wildlifesecurity_icon"
-		  android:label="Wildlife Security Surveillance Service">
-		</service>
+            android:name=".SurveillanceService"
+            android:icon="@drawable/wildlifesecurity_icon"
+            android:label="Wildlife Security Surveillance Service" >
+        </service>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="Settings" >
+        </activity>
+        
     </application>
 
 </manifest>
